k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: lidfem-app
  name: lidfem-app
  namespace: default
  resourceVersion: "440723924"
  uid: 3ac87e4f-b8fe-4472-a5c9-242728bc8e09
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: lidfem-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: lidfem-app
    spec:
      containers:
      - image: 941961614774.dkr.ecr.us-west-2.amazonaws.com/lidfem-app:latest
        imagePullPolicy: IfNotPresent
        name: lidfemapp
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-02-22T17:11:39Z"
    lastUpdateTime: "2021-02-22T17:12:00Z"
    message: ReplicaSet "lidfem-app-97df6d4d4" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-12-23T19:23:10Z"
    lastUpdateTime: "2022-12-23T19:23:10Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
